quase lá com os dockers

--- a/redes-II/home/work-1/docker-compose.yaml
+++ b/redes-II/home/work-1/docker-compose.yaml
@@ -3,11 +3,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.sender
+    container_name: sender
     depends_on:
       - receiver
   receiver:
     build:
       context: .
       dockerfile: Dockerfile.receiver
+    container_name: receiver
     ports:
       - "10000:10000/udp"
