--- a/redes-II/home/work-1/q6/Makefile
+++ b/redes-II/home/work-1/q6/Makefile
@@ -1,18 +1,9 @@
 start:
 	@echo "Starting the project"
 	@docker compose up -d --build --remove-orphans
-
-run-server:
-	@echo "Running server"
-	@docker compose up -d receiver
-
-run-sender:
-	@echo "Running sender"
-	@docker compose run sender
-
-show-results:
-	@echo "Showing results"
-	@docker logs receiver
+	@echo "Following logs of the receiver container"
+	@sleep 5
+	@docker logs receiver2
 
 stop-all:
 	@echo "Stopping all containers"
