--- a/redes-II/home/work-1/q6/Dockerfile.receiver
+++ b/redes-II/home/work-1/q6/Dockerfile.receiver
@@ -2,4 +2,6 @@ FROM python:3.9-slim
 WORKDIR /app
 COPY receiver.py .
 COPY constants.py .
+COPY utils.py .
+EXPOSE 10000
 CMD ["python", "receiver.py"]
