--- a/redes-II/home/work-1/q6/Dockerfile.sender
+++ b/redes-II/home/work-1/q6/Dockerfile.sender
@@ -2,4 +2,6 @@ FROM python:3.9-slim
 WORKDIR /app
 COPY sender.py .
 COPY constants.py .
+COPY utils.py .
+EXPOSE 10000
 CMD ["python", "sender.py"]
