--- a/redes-II/home/work-1/q6/docker-compose.yaml
+++ b/redes-II/home/work-1/q6/docker-compose.yaml
@@ -1,62 +1,76 @@
-networks:
-  default:
-    driver: bridge
-    
 services:
-  sender2:
+
+  sender-q6:
+    image: sender-q6
     build:
       context: .
       dockerfile: Dockerfile.sender
-    container_name: sender2
-    depends_on:
-      - node1
-    networks:
-      - default
-
-  node1:
-    build:
-      context: .
-      dockerfile: Dockerfile.node
-    container_name: node1
-    depends_on:
-      - node2
-    networks:
-      - default
-
-  node2:
-    build:
-      context: .
-      dockerfile: Dockerfile.node
-    container_name: node2
-    depends_on:
-      - node3
-    networks:
-      - default
-  node3:
-    build:
-      context: .
-      dockerfile: Dockerfile.node
-    container_name: node3
-    depends_on:
-      - node4
-    networks: 
-      - default
-  node4:
-    build:
-      context: .
-      dockerfile: Dockerfile.node
-    container_name: node4
-    depends_on:
-      - receiver2
-    networks:
-      - default
-
-  receiver2:
-    build:
-      context: .
-      dockerfile: Dockerfile.receiver
-    container_name: receiver2
+    container_name: sender-q6
     ports:
-      - "10000:10000/udp"
+      - "11000:10000"
     networks:
-      - default 
+      - test-network
+
+  router-1:
+    image: router-1
+    build:
+      context: .
+      dockerfile: Dockerfile.router
+    container_name: router-1
+    ports:
+      - "10001:10000"
+    networks:
+      - test-network
+
+  router-2:
+    image: router-1
+    build:
+      context: .
+      dockerfile: Dockerfile.router
+    container_name: router-1
+    ports:
+      - "10001:10000"
+    networks:
+      - test-network
+
+  router-3:
+    image: router-1
+    build:
+      context: .
+      dockerfile: Dockerfile.router
+    container_name: router-1
+    ports:
+      - "10001:10000"
+    networks:
+      - test-network
+
+  router-4:
+    image: router-1
+    build:
+      context: .
+      dockerfile: Dockerfile.router
+    container_name: router-1
+    ports:
+      - "10001:10000"
+    networks:
+      - test-network
+
+
+
+  receiver-q6:
+    image: router-1
+    build:
+      context: .
+      dockerfile: Dockerfile.router
+    container_name: router-1
+    ports:
+      - "10001:10000"
+    networks:
+      - test-network
+
+networks:
+  test-network:
+    driver: bridge
+
+volumes:
+  db_volume:
