--- a/redes-II/home/work-1/q6/Dockerfile.router
+++ b/redes-II/home/work-1/q6/Dockerfile.router
@@ -1,7 +1,7 @@
 FROM python:3.9-slim
 WORKDIR /app
-COPY node.py .
+COPY router.py .
 COPY constants.py .
 COPY utils.py .
 EXPOSE 10000
-CMD ["python", "node.py"]
+CMD ["python", "router.py"]
