--- a/redes-II/home/work-1/q6/Makefile
+++ b/redes-II/home/work-1/q6/Makefile
@@ -1,6 +1,6 @@
 start:
 	@echo "Starting the project"
-	@docker compose up --build --remove-orphans
+	@docker compose up -d --build --remove-orphans
 
 
 stop-all:
@@ -11,3 +11,7 @@ clean:
 	@echo "Removing all containers and images"
 	@docker rm -f $(shell docker ps -aq)
 	@docker rmi -f $(shell docker images -q)
+
+logs:
+	@echo "Showing logs"
+	@docker compose logs
