--- a/redes-II/home/work-1/q6/Dockerfile.router2
+++ b/redes-II/home/work-1/q6/Dockerfile.router2
@@ -1,6 +1,6 @@
 FROM python:3.9-slim
 WORKDIR /app
-COPY sender.py .
+COPY router2.py .
 COPY constants.py .
 COPY utils.py .
-CMD ["python", "sender.py"]
+CMD ["python", "router2.py"]
