--- a/redes-II/home/work-1/q6/Dockerfile.router3
+++ b/redes-II/home/work-1/q6/Dockerfile.router3
@@ -1,7 +1,6 @@
 FROM python:3.9-slim
 WORKDIR /app
-COPY router.py .
+COPY router3.py .
 COPY constants.py .
 COPY utils.py .
-EXPOSE 10000
-CMD ["python", "router.py"]
+CMD ["python", "router3.py"]
