--- a/redes-II/home/work-1/q6/Makefile
+++ b/redes-II/home/work-1/q6/Makefile
@@ -3,7 +3,7 @@ start:
 	@docker compose up -d --build --remove-orphans
 
 
-stop-all:
+stop:
 	@echo "Stopping all containers"
 	@docker stop $(shell docker ps -q)
 
@@ -15,3 +15,7 @@ clean:
 logs:
 	@echo "Showing logs"
 	@docker compose logs
+
+run-sender:
+	@echo "Running sender.py in a new container"
+	@docker run --rm --name sender-q6 -v "$(pwd)":/app -w /app python:3.9-slim python sender.py
