sucess first step

--- a/redes-II/home/work-1/q6/Makefile
+++ b/redes-II/home/work-1/q6/Makefile
@@ -19,3 +19,9 @@ logs:
 run-sender:
 	@echo "Running sender.py in a new container"
 	@docker run --rm --name sender-q6 -v "$(pwd)":/app -w /app python:3.9-slim python sender.py
+
+result-client:
+	@docker logs sender-q6
+
+result-server:
+	@docker logs receiver-q6
