--- a/sistemas-inteligentes/pyproject.toml
+++ b/sistemas-inteligentes/pyproject.toml
@@ -9,7 +9,12 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 matplotlib = "^3.9.2"
+pandas = "^2.2.3"
+numpy = "^2.1.2"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
