--- a/sistemas-inteligentes/pyproject.toml
+++ b/sistemas-inteligentes/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 matplotlib = "^3.9.2"
 pandas = "^2.2.3"
 numpy = "^2.1.2"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
