--- a/sistemas-inteligentes/pyproject.toml
+++ b/sistemas-inteligentes/pyproject.toml
@@ -13,6 +13,8 @@ pandas = "^2.2.3"
 numpy = "^2.1.2"
 seaborn = "^0.13.2"
 scikit-learn = "^1.5.2"
+imbalanced-learn = "^0.12.4"
+xgboost = "^2.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
