--- a/sistemas-inteligentes/pyproject.toml
+++ b/sistemas-inteligentes/pyproject.toml
@@ -15,6 +15,7 @@ seaborn = "^0.13.2"
 scikit-learn = "^1.5.2"
 imbalanced-learn = "^0.12.4"
 xgboost = "^2.1.2"
+opencv-python = "^4.10.0.84"
 
 
 [tool.poetry.group.dev.dependencies]
