--- a/redes-II/test3/firewall/dockerfile
+++ b/redes-II/test3/firewall/dockerfile
@@ -1,7 +1,10 @@
 FROM ubuntu:latest
 
-RUN apt-get update && \
-    apt-get install -y iproute2 iptables && \
-    apt-get clean
+# Instalar ferramentas necessárias
+RUN apt-get update && apt-get install -y \
+    iproute2 iptables iputils-ping \
+    && echo "net.ipv4.ip_forward=1" >> /etc/sysctl.conf \
+    && apt-get clean
 
-CMD ["sh", "-c", "tail -f /dev/null"]
+# Manter o container ativo
+CMD ["sh", "-c", "sysctl -p && tail -f /dev/null"]
