--- a/redes-II/test3/net-a/host1/dockerfile
+++ b/redes-II/test3/net-a/host1/dockerfile
@@ -1,5 +1,8 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get update -y && apt-get install -y curl
+RUN apt-get update && apt-get update -y && apt-get install -y curl && apt-get install iputils-ping -y
+
+# RUN echo "nameserver 10.0.0.20" >> /etc/resolv.conf
+
 
 CMD ["sh", "-c", "sleep infinity"]
