--- a/redes-II/test3/net-a/dns/named.conf
+++ b/redes-II/test3/net-a/dns/named.conf
@@ -2,11 +2,28 @@
 
 options {
     directory "/var/cache/bind";
-    allow-query { any; };  // Permite consultas de qualquer IP
-    listen-on { 10.0.0.20; };  // IP do DNS na Sub-rede A
+    allow-query { any; };  
+    #// Permite consultas de qualquer IP
+    listen-on { 10.0.0.20; };  
+    #// IP do DNS na Sub-rede A
 };
 
 zone "empresa-a.com" IN {
-    type master;
-    file "/etc/bind/db.empresa-a.com";  // Caminho para o arquivo de zona de empresa-a.com
+    type master; 
+    #// Tipo de zona: Master ou Slave, onde podem ser usados como primary and secundary
+    file "/etc/bind/empresa-a.com.db";  
+    # Caminho para o arquivo de zona de empresa-a.com
 };
+
+# logging {
+#     channel default_debug {
+#         file "/var/log/named.log";
+#         severity debug 3;
+#         print-time yes;
+#         print-severity yes;
+#         print-category yes;
+#     };
+
+#     category default { default_debug; };
+#     category queries { default_debug; };
+# };
