--- a/redes-II/test3/net-b/dns/dockerfile
+++ b/redes-II/test3/net-b/dns/dockerfile
@@ -1,10 +1,12 @@
 FROM ubuntu/bind9:latest
 
+RUN apt-get update -y && apt-get install -y dnsutils
+
 ENV TZ=UTC
 
 EXPOSE 53/tcp 53/udp
 
 COPY ./named.conf /etc/bind/named.conf
-COPY ./db.empresa-b.com /etc/bind/db.empresa-b.com
+COPY ./empresa-b.com.db /etc/bind/empresa-b.com.db
 
 CMD ["named", "-g"]
