--- a/redes-II/test3/net-b/host2/dockerfile
+++ b/redes-II/test3/net-b/host2/dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get update -y && apt-get install -y curl
+RUN apt-get update && apt-get update -y && apt-get install -y curl && apt-get install iputils-ping -y
 
 CMD ["sh", "-c", "sleep infinity"]
