feat: report q3 in progress

--- a/redes-II/test3/report/net-a/web/dockerfile
+++ b/redes-II/test3/report/net-a/web/dockerfile
@@ -1,3 +1,6 @@
 FROM nginx:latest
 
+COPY ./index.html /usr/share/nginx/html
+COPY ./empresa-a.com.conf /etc/nginx/conf.d/
+
 CMD ["nginx", "-g", "daemon off;"]
