--- a/redes-II/test3/report/net-b/dns/dockerfile
+++ b/redes-II/test3/report/net-b/dns/dockerfile
@@ -6,9 +6,8 @@ ENV TZ=UTC
 
 EXPOSE 53/tcp 53/udp
 
-CMD ["sh", "-c", "sleep infinity"]
+COPY ./named.conf /etc/bind/named.conf
 
-# COPY ./named.conf /etc/bind/named.conf
-# COPY ./empresa-a.com.db /etc/bind/empresa-a.com.db
+COPY ./empresa-b.com.db /etc/bind/empresa-b.com.db
 
-# CMD ["named", "-g"]
+CMD ["named", "-g"]
